Fix switch statement in operator and overflow

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ h1{
     background-color: lightgray;
     margin: 0px;
     padding: 8px;
-    width: 309px;
+    width: 329px;
 
 }
 
@@ -20,7 +20,7 @@ h1{
     display: flex;
     flex-direction: column;
     background-color: lightgray;
-    width: 325px;
+    width: 345px;
     border-style: solid;
     border-color: grey;
 }
@@ -34,8 +34,8 @@ h1{
     border-style: solid;
     border-color: grey;
     margin: 5px;
-    width: 50px;
-    height: 50px;
+    width: 60px;
+    height: 60px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -49,7 +49,7 @@ h1{
 
 
 .display-container{
-    width: 325px;
+    width: 345px;
     border-style: solid;
     border-color: grey;
     border-bottom-width: 0px;
